Los nodos se ven bien